--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -11,10 +11,10 @@
         <nav class="navbar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li><a href="src/index/index.html">Home</a></li>
-                    <li><a href="src/bio/bio.html">Bio</a></li>
-                    <li><a href="src/experience/experience.html">Experience</a></li>
-                    <li><a href="src/portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="../index/index.html">Home</a></li>
+                    <li><a href="../bio/bio.html">Bio</a></li>
+                    <li><a href="../experience/experience.html">Experience</a></li>
+                    <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
                 </ul>
             </div>
         </nav>    </header>
