--- a/src/Portfolio/portfolio.html
+++ b/src/Portfolio/portfolio.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <nav class="navbar">
+            <div class="container">
+                <ul class="nav-menu">
+                    <li><a href="../index/index.html">Home</a></li>
+                    <li><a href="../bio/bio.html">Bio</a></li>
+                    <li><a href="../experience/experience.html">Experience</a></li>
+                    <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <section id="portfolio">
