--- a/src/Experience/experience.html
+++ b/src/Experience/experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience Page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="experience.css">
 </head>
 <body>
@@ -20,24 +20,22 @@
         </nav>
     </header>
     <main>
-        <section id="experience">
+        <section id="landing">
             <div class="container">
-                <h2>Professional Experience</h2>
-                <ul>
-                    <li>
-                        <h3>Company Name</h3>
-                        <p>Job Title</p>
-                        <p>Description of your role and accomplishments.</p>
-                    </li>
-                </ul>
-                <h2>Education</h2>
-                <ul>
-                    <li>
-                        <h3>School Name</h3>
-                        <p>Degree</p>
-                        <p>Description of your education and achievements.</p>
-                    </li>
-                </ul>
+                <div class="card">
+                    <img src="stockimage1.jpg" alt="Profile Picture">
+                    <h2>Welcome to My Blog</h2>
+                    <p>Hey there!</p>
+                    <p>Welcome to my little corner of the web! I'm Lexi, and I'm so glad you're here. This blog is where I share my thoughts, experiences, and everything in between.</p>
+                    <p>Expect a mix of personal anecdotes, insights, and maybe even a few rants. Whether you're here for a quick read or to dive deep into a topic, I hope you find something that resonates with you.</p>
+                    <p>Feel free to kick off your shoes, grab a snack, and make yourself at home. Let's explore this digital world together!</p>
+                    <p>Enjoy!</p>
+                    <p>Lexi.</p>
+                </div>
+                <blockquote>
+                    <p>"People like Coldplay and voted for the Nazis, you can’t trust people, Jez."</p>
+                    <footer>- Super Hans</footer>
+                </blockquote>
             </div>
         </section>
     </main>
