--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -17,16 +17,24 @@
                     <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
                 </ul>
             </div>
-        </nav>    </header>
+        </nav>
+    </header>
     <main>
         <section id="landing">
             <div class="container">
-                <img src="stockimage1.jpg" alt="Profile Picture">
-                <h2>Words to live by</h2>
-                <p>"If you don't know, don't worry".</p>
+                <div class="card">
+                    <img src="stockimage1.jpg" alt="Profile Picture">
+                    <h2>Welcome to My Blog</h2>
+                    <p>Hey there!</p>
+                    <p>Welcome to my little corner of the web! I'm Lexi, and I'm so glad you're here. This blog is where I share my thoughts, experiences, and everything in between.</p>
+                    <p>Expect a mix of personal anecdotes, insights, and maybe even a few rants. Whether you're here for a quick read or to dive deep into a topic, I hope you find something that resonates with you.</p>
+                    <p>Feel free to kick off your shoes, grab a snack, and make yourself at home. Let's explore this digital world together!</p>
+                    <p>Enjoy!</p>
+                    <p>Lexi.</p>
+                </div>
                 <blockquote>
-                    <p>"Insert your favorite quote here."</p>
-                    <footer>- Author</footer>
+                    <p>"People like Coldplay and voted for the Nazis, you can’t trust people, Jez."</p>
+                    <footer>- Super Hans</footer>
                 </blockquote>
             </div>
         </section>
