--- a/src/Portfolio/portfolio.html
+++ b/src/Portfolio/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
@@ -20,19 +20,22 @@
         </nav>
     </header>
     <main>
-        <section id="portfolio">
+        <section id="landing">
             <div class="container">
-                <h2>Project 1</h2>
-                <p>Description of Project 1</p>
-                <img src="project1.jpg" alt="Project 1 Screenshot">
-                <a href="#">Link to Project 1</a>
-
-                <h2>Project 2</h2>
-                <p>Description of Project 2</p>
-                <img src="project2.jpg" alt="Project 2 Screenshot">
-                <a href="#">Link to Project 2</a>
-                
-                <!-- Add more projects as needed -->
+                <div class="card">
+                    <img src="stockimage1.jpg" alt="Profile Picture">
+                    <h2>Welcome to My Blog</h2>
+                    <p>Hey there!</p>
+                    <p>Welcome to my little corner of the web! I'm Lexi, and I'm so glad you're here. This blog is where I share my thoughts, experiences, and everything in between.</p>
+                    <p>Expect a mix of personal anecdotes, insights, and maybe even a few rants. Whether you're here for a quick read or to dive deep into a topic, I hope you find something that resonates with you.</p>
+                    <p>Feel free to kick off your shoes, grab a snack, and make yourself at home. Let's explore this digital world together!</p>
+                    <p>Enjoy!</p>
+                    <p>Lexi.</p>
+                </div>
+                <blockquote>
+                    <p>"People like Coldplay and voted for the Nazis, you can’t trust people, Jez."</p>
+                    <footer>- Super Hans</footer>
+                </blockquote>
             </div>
         </section>
     </main>
