--- a/src/Experience/experience.html
+++ b/src/Experience/experience.html
@@ -22,20 +22,54 @@
     <main>
         <section id="landing">
             <div class="container">
-                <div class="card">
-                    <img src="stockimage1.jpg" alt="Profile Picture">
-                    <h2>Welcome to My Blog</h2>
-                    <p>Hey there!</p>
-                    <p>Welcome to my little corner of the web! I'm Lexi, and I'm so glad you're here. This blog is where I share my thoughts, experiences, and everything in between.</p>
-                    <p>Expect a mix of personal anecdotes, insights, and maybe even a few rants. Whether you're here for a quick read or to dive deep into a topic, I hope you find something that resonates with you.</p>
-                    <p>Feel free to kick off your shoes, grab a snack, and make yourself at home. Let's explore this digital world together!</p>
-                    <p>Enjoy!</p>
-                    <p>Lexi.</p>
+                <div class="experience-item">
+                    <img src="schroders-logo.jpg" alt="Schroders Logo">
+                    <div class="experience-details">
+                        <h3>Schroders</h3>
+                        <p>Duration: 09/2023 - Present</p>
+                        <p>Job Title: Apprentice Software Engineer</p>
+                    </div>
                 </div>
-                <blockquote>
-                    <p>"People like Coldplay and voted for the Nazis, you can’t trust people, Jez."</p>
-                    <footer>- Super Hans</footer>
-                </blockquote>
+                <div class="experience-item">
+                    <img src="victus-soul-logo.jpg" alt="Victus Soul Logo">
+                    <div class="experience-details">
+                        <h3>Victus Soul</h3>
+                        <p>Duration: 06/2021 - 08/2023</p>
+                        <p>Job Title: CRM and FOH Manager</p>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <img src="peloton-logo.jpg" alt="Peloton Logo">
+                    <div class="experience-details">
+                        <h3>Peloton</h3>
+                        <p>Duration: 09/2020 - 05/2022</p>
+                        <p>Job Title: Peloton Expert</p>
+                    </div>
+                </div>            
+                <div class="experience-item">
+                    <img src="QMUL-logo.jpg" alt="QMUL Logo">
+                    <div class="experience-details">
+                        <h3>Queen Mary University of London</h3>
+                        <p>Duration: 09/2020 - 06/2022</p>
+                        <p>BA Modern Languages - French, Spanish & Italian</p>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <img src="sweaty-betty-logo.webp" alt="Sweaty Betty Logo">
+                    <div class="experience-details">
+                        <h3>Sweaty Betty</h3>
+                        <p>Duration: 02/2020 - 08/2020</p>
+                        <p>Job Title: Brand Marketing Assistant</p>
+                    </div>
+                </div>      
+                <div class="experience-item">
+                    <img src="lululemon-logo.gif" alt="Lululemon Logo">
+                    <div class="experience-details">
+                        <h3>Lululemon Athletica</h3>
+                        <p>Duration: 02/2018 - 02/2020</p>
+                        <p>Job Title: Community Lead</p>
+                    </div>
+                </div>                            
             </div>
         </section>
     </main>
